# imcf-fiji-mocks

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
ij/: README.md  pyproject.toml
ij/src/ij/: __init__.py  process.py
ij/src/ij/plugin/: __init__.py  filter.py
inra/: README.md  pyproject.toml
java/: README.md  pyproject.toml
loci/: README.md  pyproject.toml
loci/src/loci/: formats.py
mcib3d/: README.md  pyproject.toml
src/bdv/util/source/: fused.py
src/ij/: __init__.py
src/inra/ijpb/: plugins.py
src/org/scijava/module/: __init__.py
src/org/scijava/script/: __init__.py
