[tool.poetry]
authors = [
  "Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>",
  "Laurent Guerard <laurent.guerard@unibas.ch>",
  "Kai Schleicher <kai.schleicher@unibas.ch>",
]
description = "Mocks collection for Fiji-Python. Zero functional code."
include = ["CHANGELOG.md"]
name = "imcf-fiji-mocks"

packages = [
  { include = "ch", from = "src" },
  { include = "de", from = "src" },
  { include = "fiji", from = "src" },
  { include = "fr", from = "src" },
  { include = "ij", from = "src" },
  { include = "inra", from = "src" },
  { include = "java", from = "src" },
  { include = "javax", from = "src" },
  { include = "loci", from = "src" },
  { include = "mcib3d", from = "src" },
  { include = "net", from = "src" },
  { include = "omero", from = "src" },
  { include = "org", from = "src" },
]

readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=2.7"

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff.lint]
select = [
  "D",    # enable "pydocstyle" rules
  "D212", # summary lines must be on the first physical line of the docstring
  "D401", # imperative mood for all docstrings
  "D415", # summary line has to end in a punctuation mark
  "D417", # require documentation for *all* function parameters

]

ignore = [
  "D202", # no blank lines allowed after function docstring
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
