[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "Mock lib providing fake 'ij' imports."
name = "ij"
readme = "README.md"
version = "0.1.19"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
