[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "Dummy lib for generating pdoc documentation importing the 'loci' package."
name = "loci"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
